Add archive to footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -929,7 +929,7 @@ h3 {
 
 .footer-grid {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-columns: 3fr 1fr 1fr 1fr;
   gap: 20px;
 }
 
