Adjust Archive layout in mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -267,7 +267,7 @@ h3 {
 
 .archive-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
   border-top: 1px solid var(--border-primary);
   padding-top: 20px;
   gap: 20px;
@@ -1322,11 +1322,12 @@ h3 {
 
   /* Archive */
   .archive-grid {
-    grid-template-columns: 1fr;
-    gap: 40px;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
   }
 
   .archive-heading {
+    grid-column: span 2;
     font-size: 36px;
     line-height: 44px;
   }
